src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/GeqNullFloat.deca
//Description
//  Test => entre un null et un float
//
//Réponse
//  Erreur contextuelle ligne 9
//  types incompatibles pour faire la comparaison
{
    float x;
    null => x;
}